# blue-lagoon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PHILOSOPHY.md  README.md  compose.yaml  interaction_log_1.txt  logs.txt  skills-lock.json
.claude/: settings.local.json
config/: default.toml  local.example.toml  self_model_seed.toml
crates/harness/: Cargo.toml
crates/harness/src/: approval.rs  attachments.rs  audit.rs  background.rs  background_execution.rs  background_planning.rs  causal_links.rs  config.rs  context.rs  continuity.rs  db.rs  execution.rs  fetched_content.rs  foreground.rs  foreground_orchestration.rs  governed_actions.rs  identity.rs  ingress.rs  integrations.rs  lib.rs  management.rs  memory.rs  migration.rs  model_calls.rs  model_gateway.rs  policy.rs  proposal.rs  recovery.rs  retrieval.rs  runtime.rs  scheduled_foreground.rs  schema.rs  self_model.rs  telegram.rs  tool_execution.rs  trace.rs  worker.rs  workspace.rs
crates/harness/tests/: artifact_naming.rs  continuity_component.rs  continuity_integration.rs  foreground_component.rs  foreground_integration.rs  foundation_component.rs  foundation_integration.rs  governed_actions_component.rs  governed_actions_integration.rs  management_component.rs  management_integration.rs  migration_component.rs  phase1_component.rs  phase1_integration.rs  phase2_component.rs  phase2_integration.rs  recovery_component.rs  recovery_integration.rs  unconscious_component.rs  unconscious_integration.rs  use_case_scenarios.rs
crates/harness/tests/fixtures/telegram/: approval_callback.json  approval_callback_delegate.json  approval_callback_reject.json  approval_command_approve.json  approval_command_reject.json  private_batch.json  private_command_with_document.json  private_command_with_document_attachment_payload.json  private_command_with_unsupported_document.json  private_preference_followup.json  private_preference_message.json  private_text_backlog_batch.json  private_text_delegate_message.json  private_text_message.json  rejected_group_message.json  unsupported_update.json
crates/harness/tests/support/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: admin.rs  main.rs
crates/runtime/tests/: admin_cli.rs
crates/workers/: Cargo.toml
crates/workers/src/: main.rs
crates/workers/tests/: conscious_worker_cli.rs  smoke_worker_cli.rs  unconscious_worker_cli.rs
docs/: COMPLIANCE_REPORT.md  HIGH_LEVEL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_DESIGN.md  LOOP_ARCHITECTURE.md  PHASE_1_1_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_1_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_2_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_3_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_4_5_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_4_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_5_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_6_DETAILED_IMPLEMENTATION_PLAN.md  PHASE_7_DETAILED_IMPLEMENTATION_PLAN.md  REAL_WORLD_ASSISTANT_GAP_CLOSURE_DESIGN.md  REQUIREMENTS.md  USER_MANUAL.md  USE_CASE_CATALOG.md  architecture-diagrams.md  (+15 more)
(+61 files in other folders)
