[workspace]
members = [
    "crates/runtime",
    "crates/contracts",
    "crates/harness",
    "crates/workers",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.49", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
once_cell = "1.21.3"
predicates = "3.1.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
